# greentic-fast2flow

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.codex/: repo_overview.md
.codex/fast2flow-core/: PR.md
.codex/fast2flow-hookfilter-default/: PR.md
.codex/fast2flow-indexer-capability/: PR.md
.codex/fast2flow-llm-interface/: PR.md
.codex/fast2flow-llm-ollama-guest/: PR.md
.codex/fast2flow-llm-openai-guest/: PR.md
.codex/fast2flow-strategy-phase1/: PR.md
.codex/routing-extension-fast2flow-gtpack/: PR.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  dev-publish.yml  publish.yml
ci/: build_gtpack.sh  generate_release_manifests.py  local_check.sh  publish_crates.sh  publish_dry_run.sh  test_gtpack_replay.sh
ci/templates/: routing-hook-fast2flow-config.schema.json
ci/wizard/: finalize.answers.json  flow.answers.json  gtc-launcher.answers.json
cli/fast2flow-cli/: Cargo.toml
cli/fast2flow-cli/src/: main.rs
cli/fast2flow-cli/tests/: cli_bundle.rs
components/: Cargo.toml  manifest.json
components/indexer/: Cargo.toml
components/indexer/src/: descriptor.rs  index.rs  lib.rs  schema.rs
components/matcher/: Cargo.toml
components/matcher/src/: bm25.rs  descriptor.rs  lib.rs  schema.rs
components/router/: Cargo.toml  component.manifest.json
components/router/src/: descriptor.rs  lib.rs  route.rs  schema.rs
crates/fast2flow-bundle/: Cargo.toml
crates/fast2flow-bundle/src/: hooks.rs  index.rs  lib.rs  parser.rs  scanner.rs
crates/fast2flow-bundle/tests/: bundle_integration.rs
crates/fast2flow-contracts/: Cargo.toml
crates/fast2flow-contracts/src/: lib.rs
crates/fast2flow-core/: Cargo.toml
crates/fast2flow-core/src/: lib.rs
crates/fast2flow-core/tests/: routing_pipeline.rs
crates/fast2flow-hooks/: Cargo.toml
crates/fast2flow-hooks/src/: lib.rs
crates/fast2flow-hooks/tests/: respond_match_modes.rs
crates/fast2flow-indexer/: Cargo.toml
crates/fast2flow-indexer/src/: lib.rs
crates/fast2flow-indexer/tests/: intent_prefill.rs
crates/fast2flow-llm/: Cargo.toml
crates/fast2flow-llm-ollama/: Cargo.toml
crates/fast2flow-llm-ollama/src/: lib.rs
crates/fast2flow-llm-openai/: Cargo.toml
crates/fast2flow-llm-openai/src/: lib.rs
crates/fast2flow-llm/src/: lib.rs
crates/fast2flow-routing-gtpack/: Cargo.toml
crates/fast2flow-routing-gtpack/src/: config.rs  host.rs  lib.rs  policy.rs  telemetry.rs  wit_entrypoint.rs
crates/fast2flow-routing-gtpack/tests/: bootstrap.rs  host_startup_e2e.rs  mounted_runtime.rs  policy_overrides.rs
crates/fast2flow-routing-gtpack/wit/: fast2flow.wit
crates/fast2flow-strategy/: Cargo.toml
crates/fast2flow-strategy-phase1/: Cargo.toml
crates/fast2flow-strategy-phase1/src/: lib.rs
crates/fast2flow-strategy/src/: lib.rs
crates/greentic-intent/: Cargo.toml  README.md
crates/greentic-intent/src/: builtin.rs  context.rs  engine.rs  entity.rs  gazetteer.rs  language.rs  lib.rs  locale.rs  marker.rs  resolver.rs  resources.rs  token.rs  tokenizer.rs
crates/greentic-intent/src/extractors/: date.rs  email.rs  location.rs  mod.rs  person.rs  phone.rs  time.rs  url.rs
crates/greentic-intent/tests/: smoke.rs
packs/fast2flow/: pack.yaml
packs/fast2flow/flows/: index.ygtc  match.ygtc  route.ygtc
scripts/: build_components.sh  package_components.py  package_components.sh  publish_components.sh
tests/fixtures/: flows.json  policy.sample.json
tests/fixtures/sample-bundle/packs/hr-pack/flows/: booking.ygtc  leave.ygtc
tests/fixtures/sample-bundle/packs/support-pack/flows/: faq.ygtc  refund.ygtc  shipping.ygtc
