[workspace]
resolver = "2"
members = [
    "cli/fast2flow-cli",
    # WASM components (edition 2024)
    "components/indexer",
    "components/matcher",
    "components/router",
    "crates/fast2flow-bundle",
    # Host crates (edition 2021)
    "crates/fast2flow-contracts",
    "crates/fast2flow-core",
    "crates/fast2flow-hooks",
    "crates/fast2flow-indexer",
    "crates/fast2flow-llm",
    "crates/fast2flow-llm-ollama",
    "crates/fast2flow-llm-openai",
    "crates/fast2flow-routing-gtpack",
    "crates/fast2flow-strategy",
    "crates/fast2flow-strategy-phase1",
    # Standalone open-source primitive (Apache-2.0 OR MIT, publish=true).
    # See ci/publish_dry_run.sh ALLOWED_PUBLISHABLE_CRATES allowlist.
    "crates/greentic-intent",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
rust-version = "1.95"
license = "Commercial"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
greentic-secrets-lib = "0.5"
greentic-telemetry = "0.5"
greentic-types = "0.5"
regex = "1"
serde_json = "1"
serial_test = "3"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
walkdir = "2.5"
wit-bindgen = "0.57"

[workspace.dependencies.chrono]
version = "0.4"
default-features = false

[workspace.dependencies.clap]
version = "4"
features = [
    "derive",
]

[workspace.dependencies.fast2flow-bundle]
path = "crates/fast2flow-bundle"

[workspace.dependencies.fast2flow-contracts]
path = "crates/fast2flow-contracts"

[workspace.dependencies.fast2flow-core]
path = "crates/fast2flow-core"

[workspace.dependencies.fast2flow-hooks]
path = "crates/fast2flow-hooks"

[workspace.dependencies.fast2flow-indexer]
path = "crates/fast2flow-indexer"

[workspace.dependencies.fast2flow-llm]
path = "crates/fast2flow-llm"

[workspace.dependencies.fast2flow-llm-ollama]
path = "crates/fast2flow-llm-ollama"

[workspace.dependencies.fast2flow-llm-openai]
path = "crates/fast2flow-llm-openai"

[workspace.dependencies.fast2flow-routing-gtpack]
path = "crates/fast2flow-routing-gtpack"

[workspace.dependencies.fast2flow-strategy]
path = "crates/fast2flow-strategy"

[workspace.dependencies.fast2flow-strategy-phase1]
path = "crates/fast2flow-strategy-phase1"

[workspace.dependencies.greentic-interfaces-guest]
version = "0.5"
default-features = false
features = [
    "component-v0-6",
]

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "json",
    "rustls",
]

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5"

[workspace.dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
    "time",
]

[workspace.metadata.fast2flow]
authoritative_crate = "fast2flow-contracts"
