[package]
name = "greentic-fast2flow"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
autobins = false

[[bin]]
name = "greentic-fast2flow"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fast2flow-bundle = { path = "../../crates/fast2flow-bundle" }
fast2flow-contracts = { path = "../../crates/fast2flow-contracts" }
fast2flow-core = { path = "../../crates/fast2flow-core" }
fast2flow-hooks = { path = "../../crates/fast2flow-hooks" }
fast2flow-indexer = { path = "../../crates/fast2flow-indexer" }
fast2flow-routing-gtpack = { path = "../../crates/fast2flow-routing-gtpack" }
fast2flow-strategy-phase1 = { path = "../../crates/fast2flow-strategy-phase1" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
