[package]
name = "greentic-fast2flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
autobins = false

[[bin]]
name = "greentic-fast2flow"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fast2flow-bundle.workspace = true
fast2flow-contracts.workspace = true
fast2flow-core.workspace = true
fast2flow-hooks.workspace = true
fast2flow-indexer.workspace = true
fast2flow-routing-gtpack.workspace = true
fast2flow-strategy-phase1.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
