[package]
name = "fast2flow-component-indexer"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
publish = false
description = "Greentic component to build flow index for fast2flow routing"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.greentic]
abi_version = "0.6.0"

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[dependencies]
greentic-types.workspace = true
greentic-interfaces-guest.workspace = true
serde.workspace = true
serde_json.workspace = true
