[package]
name = "fast2flow-component-router"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
publish = false
description = "Greentic component for intelligent flow routing with LLM fallback"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.greentic]
abi_version = "0.6.0"

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[dependencies]
fast2flow-contracts.workspace = true
fast2flow-core.workspace = true
fast2flow-hooks.workspace = true
fast2flow-indexer.workspace = true
fast2flow-strategy-phase1.workspace = true
futures.workspace = true
greentic-types.workspace = true
greentic-interfaces-guest.workspace = true
serde.workspace = true
serde_json.workspace = true
