[package]
name = "fast2flow-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Bundle scanning and indexing for fast2flow routing"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde", "std", "clock"] }
fast2flow-contracts.workspace = true
fast2flow-indexer.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
