[package]
name = "fast2flow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
fast2flow-contracts.workspace = true
fast2flow-hooks.workspace = true
fast2flow-llm.workspace = true
fast2flow-strategy.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
fast2flow-indexer.workspace = true
fast2flow-strategy-phase1.workspace = true
serde_json.workspace = true
tokio.workspace = true
