[package]
name = "fast2flow-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
fast2flow-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
