[package]
name = "fast2flow-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
fast2flow-contracts.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
