[package]
name = "fast2flow-routing-gtpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "greentic-fast2flow-routing-host"
path = "src/bin/fast2flow-routing-host.rs"

[dependencies]
anyhow.workspace = true
fast2flow-contracts.workspace = true
fast2flow-core.workspace = true
fast2flow-hooks.workspace = true
fast2flow-indexer.workspace = true
fast2flow-llm.workspace = true
fast2flow-strategy.workspace = true
fast2flow-strategy-phase1.workspace = true
futures.workspace = true
regex.workspace = true
serde_json.workspace = true
tracing.workspace = true
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fast2flow-llm-ollama.workspace = true
fast2flow-llm-openai.workspace = true
greentic-telemetry.workspace = true
greentic-intent = { path = "../greentic-intent", features = ["builtin-locales", "builtin-gazetteer"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serial_test.workspace = true
